ai suggestion feature added

--- a/index.htm
+++ b/index.htm
@@ -19,6 +19,7 @@
         <span></span>
         <div class="imgdiv"></div>
       </div>
+      <div class="suggestion">Please Wait...</div>
     </div>
 
     <div class="input">
@@ -31,9 +32,12 @@
           required
         />
         <button class="button" type="submit">Submit</button>
+        <button class="button" id="suggestionBtn" type="button">
+          Get AI Suggestion
+        </button>
       </form>
     </div>
 
-    <script src="./script.js"></script>
+    <script defer src="./script.js"></script>
   </body>
 </html>
